--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
-    "dev": "nodemon src/app.js"
+    "dev": "nodemon src/app.js",
+    "create-admin": "node src/scripts/createAdmin.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
@@ -29,4 +34,4 @@
     "nodemon": "^3.0.2",
     "supertest": "^6.3.3"
   }
-} 
+}
