--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gallery-monolith",
+  "name": "gallery",
   "version": "1.0.0",
-  "description": "Monolithic Art Gallery application",
+  "description": "Art Gallery application",
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
@@ -9,7 +9,7 @@
     "create-admin": "node src/scripts/createAdmin.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Effecktus",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -19,7 +19,6 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
-    "express-session": "^1.17.3",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.1",
