--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.1",
     "mysql2": "^3.6.1",
     "sequelize": "^6.33.0",
     "validator": "^13.11.0"
